feat(gamification): 完成 release 0.5.0 第二部分——采购助手与智能物品管理
本次提交为 release 0.5.0 的第二部分，在第一部分游戏化系统基础上，重点补齐采购助手、物品智能推荐、批量操作及 AI 交互能力，标志着 0.5.0 主体功能基本完成。

主要变更：
- 后端新增采购助手核心模块：采购方案（手动/模板/AI 推荐生成）、方案核对入库结算、采购任务状态流转。
- 后端新增 AI 采购推荐服务：支持日常推荐、特殊场景生成（ baby-food / bbq / family-gathering / hotpot 等）、存储位置建议及数据充足度判断。
- 后端新增用户采购计划模板：支持创建模板、从方案保存为模板、使用模板快速创建方案。
- 后端新增物品智能推荐服务：根据物品名称 AI 推荐分类、单位、存储位置、存放日期等字段，降低用户录入成本。
- 后端物品管理增强：支持批量取出物品；物品、添加记录、取出记录增加存储位置与单位快照字段。
- AI 聊天提示词全面调优：意图识别、通用对话、菜谱推荐、每日贴士、容量估算等提示词补充上下文处理与示例，提升识别准确率。
- 游戏化系统联动完善：经验获取、徽章触发与采购、物品推荐、批量取出等新场景打通，补充 ResultCode 与业务异常处理。
- 前端新增采购助手三视图（方案/任务/核对入库）及相关组件、API、图标资源与路由权限配置。
- 前端新增批量取出对话框、物品字段 AI 推荐交互，扩展 InputDialog、CustomSelect 等基础 UI 组件。
- 前端更新全局样式变量、组件库声明、新手引导流程，适配新功能入口。
- 同步更新数据库脚本，新增采购方案/明细/模板相关表，扩展物品与记录表字段。
- 其他优化：验证码工具类、Security/Auth 适配、应用构建时间更新等。

待后续完善：部分边界场景优化及 0.5.0 收尾工作。